--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
                 <tr>
                   <td>Home</td>
                   <td  style= "font-size:60px; width:100%">Gallery</td><a href=gallery.html>Gallery</a></h2></td>
-                  <td>Contact</td>
+                  <td>Contact</td><a href=contact.html>Contact</a></h2></td>
                 </tr>
             </table>
         </body>
