--- a/home.html
+++ b/home.html
@@ -3,14 +3,42 @@
     <head>
         <title>Personal</title>
         <body>
-            <h1 style="font-size:60px; font-family:Baby blocks Regular;">Portfolio</h1>
+            <h1 style="font-size:60px; font-family:Baby blocks Regular;">Hello World !</h1>
             <table style= "font-size:60px; width:100%">
                 <tr>
-                  <td>Home</td>
-                  <td  style= "font-size:60px; width:100%">Gallery</td><a href=gallery.html>Gallery</a></h2></td>
-                  <td>Contact</td><a href=contact.html>Contact</a></h2></td>
+                  <td style= "font-size:50px; font-family:Gameshow Regular; width:30%"><a href=home.html>aBOUT mE</a></h2></td>
+                  <br>
+                  <td style= "font-size:50px; font-family:Gameshow Regular; width:30%"><a href=gallery.html>cAMERA rOLL</a></h2></td>
+                  <br>
+                  <td style= "font-size:50px; font-family:Gameshow Regular; width:30%"><a href=contact.html>cONTACT</a></h2></td>
+                  <br>
                 </tr>
             </table>
+            <br>
+            <table width='80%' style="padding: 15px;  border:1px solid;">
+                <tr>
+                    <td width='80%'>
+                            <h1 style= "font-size:40px;" >General Info</h1>
+                            <p style= "font-size:30px;">Name : Sarinya Pamontree    Nickname : Aom  Student code : 620610810
+                            <br>ชื่อ : นางสาวศริญญา ภามนตรี      ชื่อเล่น : ออม    รหัสนักศึกษา : 620610810
+                            <br><br> Currently Education : 2nd Year, Computer Engineering, Faculty of Engineering, Chaing Mai University.
+                            <br>กำลังศึกษาชั้นปีที่ 2 คณะวิศวกรรมศาสตร์ สาขาวิศวกรรมคอมพิวเตอร์ มหาวิทลัยเชียงใหม่
+                            <br> 
+                            </p>
+                            <hr>
+                            <h1 style= "font-size:40px;" >EMail</h1>
+                            <p style= "font-size:30px;">Outlook : <a href="Aom_ll2555@hotmail.com">Aom_ll2555@hotmail.com</a>
+                            <br>Gmail : <a href="sarinyapamotree@gmail.com">sarinyapamotree@gmail.com</a>
+                            <br>Campus : <a href="sarinya_pa@cmu.ac.th">sarinya_pa@cmu.ac.th</a>
+                            </p>
+                            <h1 style= "font-size:40px;" >PhoneCall</h1>
+                            <p style= "font-size:30px;">(+66)962217795</p>
+                    </td>
+                    <td >
+                            <img src="home1.gif" width="220px" height="300px"/>
+                    </td>
+                </tr>
+        </table>
         </body>
     </head> 
 </html>
