--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Personal</title>
-        <body>
+        <body style= "font-size:25px;">
             <h1 style="font-size:60px; font-family:Baby blocks Regular;">Hello World !</h1>
             <table style= "font-size:60px; width:100%">
                 <tr>
