--- a/home.html
+++ b/home.html
@@ -15,29 +15,61 @@
                 </tr>
             </table>
             <br>
-            <table width='80%' style="padding: 15px;  border:1px solid;">
+            <table width='80%' style="padding: 15px;">
+            <tr>
+                <td >
+                    <img src="home1.gif" width="220px" height="300px"/>
+                </td>
+                <td style= "font-size:25px; font-family:Rocket Clouds DEMO Regular; color: crimson;" >
+                    Crazy girl in the crazy world and just wanna be lazy with ma daddy
+                    but it's not easy bcoz there are enemy wanna beast me. I don't care tho =X
+                    <br>
+                    In my blood got only Alcohol, Cafein, Nicotin, Song, Friend and Family; 
+                </td>
                 <tr>
-                    <td width='80%'>
-                            <h1 style= "font-size:40px;" >General Info</h1>
-                            <p style= "font-size:30px;">Name : Sarinya Pamontree    Nickname : Aom  Student code : 620610810
-                            <br>ชื่อ : นางสาวศริญญา ภามนตรี      ชื่อเล่น : ออม    รหัสนักศึกษา : 620610810
-                            <br><br> Currently Education : 2nd Year, Computer Engineering, Faculty of Engineering, Chaing Mai University.
-                            <br>กำลังศึกษาชั้นปีที่ 2 คณะวิศวกรรมศาสตร์ สาขาวิศวกรรมคอมพิวเตอร์ มหาวิทลัยเชียงใหม่
-                            <br> 
-                            </p>
-                            <hr>
-                            <h1 style= "font-size:40px;" >EMail</h1>
-                            <p style= "font-size:30px;">Outlook : <a href="Aom_ll2555@hotmail.com">Aom_ll2555@hotmail.com</a>
-                            <br>Gmail : <a href="sarinyapamotree@gmail.com">sarinyapamotree@gmail.com</a>
-                            <br>Campus : <a href="sarinya_pa@cmu.ac.th">sarinya_pa@cmu.ac.th</a>
-                            </p>
-                            <h1 style= "font-size:40px;" >PhoneCall</h1>
-                            <p style= "font-size:30px;">(+66)962217795</p>
+                    <td width='25%'>
+                        <h1 style= "font-size:40px;" >General Info</h1>
                     </td>
-                    <td >
-                            <img src="home1.gif" width="220px" height="300px"/>
+                    <td>
+                        <p style= "font-size:25px;">Name : Sarinya Pamontree    Nickname : Aom  Student code : 620610810
+                        <br>ชื่อ : นางสาวศริญญา ภามนตรี      ชื่อเล่น : ออม    รหัสนักศึกษา : 620610810
+                        <br><br> Currently Education : 2nd Year, Computer Engineering, Faculty of Engineering, Chaing Mai University.
+                        <br>กำลังศึกษาชั้นปีที่ 2 คณะวิศวกรรมศาสตร์ สาขาวิศวกรรมคอมพิวเตอร์ มหาวิทลัยเชียงใหม่
+                        <br> 
+                        </p>
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <h1 style= "font-size:40px;" >EMail</h1>
+                    </td>
+                    <td>
+                        <p style= "font-size:30px;"><img src="outlook.png" style="width:25px;height:25px;">  Outlook : <a href="mailto:name@yourdomain.com">Aom_ll2555@hotmail.com</a>
+                        <br><img src="gmail.png" style="width:35px;height:25px;"> Gmail : <a href="mailto:name@yourdomain.com">sarinyapamotree@gmail.com</a>
+                        <br><img src="cmu.png" style="width:25px;height:25px;"> Campus : <a href="mailto:name@yourdomain.com">sarinya_pa@cmu.ac.th</a>
+                        </p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <h1 style= "font-size:40px;" >Application</h1>
+                    </td>
+                    <td>
+                        <p style= "font-size:30px;"><img src="line logo.png" style="width:25px;height:25px;">  Line id : <a href="https://line.me/ti/p/tMsPJGtp7E"> aom_sp88</a>
+                        <br><img src="facebook.png" style="width:25px;height:25px;"> Facebook : <a href="https://web.facebook.com/wiz.sarinya"> Wiz Sarinya</a>
+                        <br><img src="insta.png" style="width:25px;height:25px;"> Instagram : <a href="https://www.instagram.com/wz.srny/"> wz.srny</a>
+                        </p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <h1 style= "font-size:40px;" >PhoneCall</h1>
+                    </td>
+                    <td>        
+                        <p style= "font-size:30px;">(+66)962217795</p>
+                    </td>
+                </tr>
+            </tr>
         </table>
         </body>
     </head> 
