--- a/contact.html
+++ b/contact.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head><style>
+        body {
+          background-image: url('bg.gif');
+          background-repeat: no-repeat;
+          background-attachment: fixed; 
+          background-size: 100% 100%;
+        }
+        </style>
+    </head> 
         <title>Personal</title>
         <body style= "font-size:25px;">
-            <h1 style="font-size:60px; font-family:Baby blocks Regular;">Hello World !</h1>
-            <table style= "font-size:60px; width:100%">
+            <h1 style="font-size:60px; font-family:Baby blocks Regular;">Hello World !</h1><hr>
+            <table style= "font-size:60px; width:100% ">
                 <tr>
-                  <td style= "font-size:50px; font-family:Gameshow Regular; width:30%"><a href=home.html>aBOUT mE</a></h2></td>
+                  <td style= "font-size:50px; text-align: center; font-family:Gameshow Regular; background:rgb(217, 187, 255); width:30% "><a href=home.html>aBOUT mE</a></h2></td>
                   <br>
-                  <td style= "font-size:50px; font-family:Gameshow Regular; width:30%"><a href=gallery.html>cAMERA rOLL</a></h2></td>
+                  <td style= "font-size:50px; text-align: center; font-family:Gameshow Regular; background:rgb(217, 187, 255); width:30%"><a href=gallery.html>cAMERA rOLL</a></h2></td>
                   <br>
-                  <td style= "font-size:50px; font-family:Gameshow Regular; width:30%"><a href=contact.html>cONTACT</a></h2></td>
+                  <td style= "font-size:50px; text-align: center; font-family:Gameshow Regular; background:rgb(217, 187, 255); width:30%"><a href=contact.html>cONTACT</a></h2></td>
                   <br>
                 </tr>
             </table>
             <br>
          <form action="#">
         <table width='80%' style="padding: 15px;   border:1px solid;">
-           
+            <h1 style="font-size:50px; font-family:Worasait Regular;"> Contact </h1>
             <tr>
                 <td><h3><label>Subject:</label></h3></td>
                 <td><input type="text" name="subject" value="" width="50px"> </td>
@@ -52,6 +60,5 @@
 
             </form>
         </table>
-        </body>
-    </head> 
+    </body>
 </html>
