--- a/home.html
+++ b/home.html
@@ -1,50 +1,87 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head><style>
+        body {
+          background-image: url('bg.gif');
+          background-repeat: no-repeat;
+          background-attachment: fixed; 
+          background-size: 100% 100%;
+        }
+        </style>
+    </head> 
         <title>Personal</title>
         <body>
-            <h1 style="font-size:60px; font-family:Baby blocks Regular;">Hello World !</h1>
-            <table style= "font-size:60px; width:100%">
+            <h1 style="font-size:60px; font-family:Baby blocks Regular;">Hello World ! <img src="wolrd.gif" width="70px" height="70px"/></h1><hr>
+            <table style= "font-size:60px; width:100% ">
                 <tr>
-                  <td style= "font-size:50px; font-family:Gameshow Regular; width:30%"><a href=home.html>aBOUT mE</a></h2></td>
+                  <td style= "font-size:50px; text-align: center; font-family:Gameshow Regular; background:rgb(217, 187, 255); width:30% "><a href=home.html>aBOUT mE</a></h2></td>
                   <br>
-                  <td style= "font-size:50px; font-family:Gameshow Regular; width:30%"><a href=gallery.html>cAMERA rOLL</a></h2></td>
+                  <td style= "font-size:50px; text-align: center; font-family:Gameshow Regular; background:rgb(217, 187, 255); width:30%"><a href=gallery.html>cAMERA rOLL</a></h2></td>
                   <br>
-                  <td style= "font-size:50px; font-family:Gameshow Regular; width:30%"><a href=contact.html>cONTACT</a></h2></td>
+                  <td style= "font-size:50px; text-align: center; font-family:Gameshow Regular; background:rgb(217, 187, 255); width:30%"><a href=contact.html>cONTACT</a></h2></td>
                   <br>
                 </tr>
             </table>
             <br>
             <table width='80%' style="padding: 15px;">
-            <tr>
+                <h1 style="font-size:50px; font-family:Worasait Regular;"> About Me </h1>
                 <td >
                     <img src="home1.gif" width="220px" height="300px"/>
                 </td>
-                <td style= "font-size:25px; font-family:Rocket Clouds DEMO Regular; color: crimson;" >
+                <td style= "font-size:25px; font-family:Rocket Clouds DEMO Regular; color: crimson;" ><hr>
                     Crazy girl in the crazy world and just wanna be lazy with ma daddy
-                    but it's not easy bcoz there are enemy wanna beast me. I don't care tho =X
-                    <br>
-                    In my blood got only Alcohol, Cafein, Nicotin, Song, Friend and Family; 
+                    but it's not easy bcoz there are enemy wanna beast me... By the way I don't care tho <img src="emoji.png" style="width:35px;height:35px;">
+                    <hr>
                 </td>
                 <tr>
                     <td width='25%'>
-                        <h1 style= "font-size:40px;" >General Info</h1>
+                        <h2 style= "font-size:40px;" >General Info</h2>
                     </td>
                     <td>
-                        <p style= "font-size:25px;">Name : Sarinya Pamontree    Nickname : Aom  Student code : 620610810
+                        <p style= "font-size:27px;">Name : Sarinya Pamontree    Nickname : Aom  Student code : 620610810
                         <br>ชื่อ : นางสาวศริญญา ภามนตรี      ชื่อเล่น : ออม    รหัสนักศึกษา : 620610810
                         <br><br> Currently Education : 2nd Year, Computer Engineering, Faculty of Engineering, Chaing Mai University.
                         <br>กำลังศึกษาชั้นปีที่ 2 คณะวิศวกรรมศาสตร์ สาขาวิศวกรรมคอมพิวเตอร์ มหาวิทลัยเชียงใหม่
-                        <br> 
+                        <br><br> Graduated High School : Strisuksa School, Roi-Et.
+                        <br>จบการศึกษาชั้นมัธยมปลายโรงเรียนสตรีศึกษา จังหวัดร้อยเอ็ด
+                        <br><br> Address : 11/2 Ronnachaichanyut Road Sub-District Nai Maueng District Maueng Roi-Et , Roi-Et 45000.
+                        <br>ที่อยู่ : 11/2 ถนนรณชัยชาญยุทธ ซอย 45 ตำบลในเมือง อำเภอเมือง จังหวัดร้อยเอ็ด 45000
+                        <br>
                         </p>
                     </td>
                 </tr>
                 <tr>
-                    <td>
-                        <h1 style= "font-size:40px;" >EMail</h1>
+                    <td width='25%'>
+                        <h2 style= "font-size:40px;" >skills</h2>
                     </td>
                     <td>
-                        <p style= "font-size:30px;"><img src="outlook.png" style="width:25px;height:25px;">  Outlook : <a href="mailto:name@yourdomain.com">Aom_ll2555@hotmail.com</a>
+                        <ul style= "font-size:27px;">
+                            <li>Dance (Free style,Cover Dance)</li>
+                            <li>Wot (traditional instrument)</li>
+                            <li>Harmonica KEY C (instrument)</li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td width='25%'>
+                        <h2 style= "font-size:40px;" >Hobbies</h2>
+                    </td>
+                    <td>
+                        <ul style= "font-size:27px;">
+                            <li>Read a book (Biology, History, Fiction)</li>
+                            <li>Cooking</li>
+                            <li>Singing</li>
+                            <li>Travel and take photos</li>
+                            <li>Seeing people and drinking coffee</li>
+                        </ul>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <h2 style= "font-size:40px;" >E-Mail</h2>
+                    </td>
+                    <td>
+                        <p style= "font-size:27px;"><img src="outlook.png" style="width:25px;height:25px;">  Outlook : <a href="mailto:name@yourdomain.com">Aom_ll2555@hotmail.com</a>
                         <br><img src="gmail.png" style="width:35px;height:25px;"> Gmail : <a href="mailto:name@yourdomain.com">sarinyapamotree@gmail.com</a>
                         <br><img src="cmu.png" style="width:25px;height:25px;"> Campus : <a href="mailto:name@yourdomain.com">sarinya_pa@cmu.ac.th</a>
                         </p>
@@ -52,10 +89,10 @@
                 </tr>
                 <tr>
                     <td>
-                        <h1 style= "font-size:40px;" >Application</h1>
+                        <h2 style= "font-size:40px;" >Application</h2>
                     </td>
                     <td>
-                        <p style= "font-size:30px;"><img src="line logo.png" style="width:25px;height:25px;">  Line id : <a href="https://line.me/ti/p/tMsPJGtp7E"> aom_sp88</a>
+                        <p style= "font-size:27px;"><img src="line logo.png" style="width:25px;height:25px;">  Line id : <a href="https://line.me/ti/p/tMsPJGtp7E"> aom_sp88</a>
                         <br><img src="facebook.png" style="width:25px;height:25px;"> Facebook : <a href="https://web.facebook.com/wiz.sarinya"> Wiz Sarinya</a>
                         <br><img src="insta.png" style="width:25px;height:25px;"> Instagram : <a href="https://www.instagram.com/wz.srny/"> wz.srny</a>
                         </p>
@@ -63,14 +100,20 @@
                 </tr>
                 <tr>
                     <td>
-                        <h1 style= "font-size:40px;" >PhoneCall</h1>
+                        <h2 style= "font-size:40px;" >PhoneCall</h2>
                     </td>
                     <td>        
-                        <p style= "font-size:30px;">(+66)962217795</p>
+                        <p style= "font-size:27px;">(+66)962217795</p>
                     </td>
                 </tr>
-            </tr>
+                <tr>
+                    <td>
+                        <h2 style= "font-size:40px;" >My Lifestyle</h2>
+                    </td>
+                    <td>        
+                        <p style= "font-size:27px;"><img src="spo.png" style="width:25px;height:25px;"><a href="https://open.spotify.com/user/21c3yomijpxlbajpwv4ij6cna?si=f5RQQoiJRlCAYrtuYbUkNA"> Click ! </a></p>
+                    </td>
+                </tr>
         </table>
         </body>
-    </head> 
 </html>
