--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
     </head> 
         <title>Personal</title>
         <body style= "font-size:25px;">
-            <h1 style="font-size:60px; font-family:Baby blocks Regular;">Hello World !</h1><hr>
+            <h1 style="font-size:60px; font-family:Baby blocks Regular;">Hello World ! <img src="wolrd.gif" width="70px" height="70px"/></h1><hr>
             <table style= "font-size:60px; width:100% ">
                 <tr>
                   <td style= "font-size:50px; text-align: center; font-family:Gameshow Regular; background:rgb(217, 187, 255); width:30% "><a href=home.html>aBOUT mE</a></h2></td>
