--- a/home.html
+++ b/home.html
@@ -58,6 +58,7 @@
                         <ul style= "font-size:27px;">
                             <li>Dance (Free style,Cover Dance)</li>
                             <li>Wot (traditional instrument)</li>
+                            <li>Guitar (instrument)</li>
                             <li>Harmonica KEY C (instrument)</li>
                         </ul>
                     </td>
@@ -103,7 +104,7 @@
                         <h2 style= "font-size:40px;" >PhoneCall</h2>
                     </td>
                     <td>        
-                        <p style= "font-size:27px;">(+66)962217795</p>
+                        <p style= "font-size:27px;">(+66) 962217795</p>
                     </td>
                 </tr>
                 <tr>
